ArtistLibrary 목록 불러오기 추가

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -4,6 +4,11 @@
 	<style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
     	.mySwiper4{height:auto;}
+    	.ellipsis{
+			overflow:hidden;
+			text-overflow: ellipsis;
+			width:200px;
+    	};
     </style>
 </head>
 
@@ -15,52 +20,13 @@
 			<!-- 동양화거장 -->
 			<div class="contents max-1500">
 				<div class="cont-title3">
-					<h3>동양화거장</h3>
+					<h3>신진 작가</h3>
 					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
-				<div class="swi-box swi-show-1">
+				<div class="swi-box swi-show-1" id="upAndComingArtistList">
 					<div class="swiper mySwiper1">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<a class="hd-div3">
-									<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>
-									<div class="user-1"><img src="resources/img/icon/user-1.png"></div>
-									<div class="hd-text">
-										<h4>김미숙</h4>
-										<div class="hd-d1">손의 수고로움으로 빚어낸 천 년의 아름다움, 옻칠화손의 수고로움...</div>
-									</div>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a class="hd-div3">
-									<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>
-									<div class="user-1"><img src="resources/img/icon/user-1.png"></div>
-									<div class="hd-text">
-										<h4>김미숙</h4>
-										<div class="hd-d1">손의 수고로움으로 빚어낸 천 년의 아름다움, 옻칠화손의 수고로움...</div>
-									</div>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a class="hd-div3">
-									<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>
-									<div class="user-1"><img src="resources/img/icon/user-1.png"></div>
-									<div class="hd-text">
-										<h4>김미숙</h4>
-										<div class="hd-d1">손의 수고로움으로 빚어낸 천 년의 아름다움, 옻칠화손의 수고로움...</div>
-									</div>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a class="hd-div3">
-									<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>
-									<div class="user-1"><img src="resources/img/icon/user-1.png"></div>
-									<div class="hd-text">
-										<h4>김미숙</h4>
-										<div class="hd-d1">손의 수고로움으로 빚어낸 천 년의 아름다움, 옻칠화손의 수고로움...</div>
-									</div>
-								</a>
-							</div>
+						<div class="swiper-wrapper" id="upAndComingArtist">
+							<div class="swiper-slide"></div>
 						</div>
 						<div class="swiper-pagination swpa-2 pc-no"></div>
 					</div>
@@ -75,52 +41,13 @@
 			<!-- 신진 작가 -->
 			<div class="contents max-1500">
 				<div class="cont-title3">
-					<h3>신진 작가</h3>
+					<h3>중견 작가</h3>
 					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
-				<div class="swi-box swi-show-2">
+				<div class="swi-box swi-show-2" id="middleAgedArtistList">
 					<div class="swiper mySwiper2">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<a class="hd-div3">
-									<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>
-									<div class="user-1"><img src="resources/img/icon/user-1.png"></div>
-									<div class="hd-text">
-										<h4>김미숙</h4>
-										<div class="hd-d1">손의 수고로움으로 빚어낸 천 년의 아름다움, 옻칠화손의 수고로움...</div>
-									</div>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a class="hd-div3">
-									<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>
-									<div class="user-1"><img src="resources/img/icon/user-1.png"></div>
-									<div class="hd-text">
-										<h4>김미숙</h4>
-										<div class="hd-d1">손의 수고로움으로 빚어낸 천 년의 아름다움, 옻칠화손의 수고로움...</div>
-									</div>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a class="hd-div3">
-									<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>
-									<div class="user-1"><img src="resources/img/icon/user-1.png"></div>
-									<div class="hd-text">
-										<h4>김미숙</h4>
-										<div class="hd-d1">손의 수고로움으로 빚어낸 천 년의 아름다움, 옻칠화손의 수고로움...</div>
-									</div>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a class="hd-div3">
-									<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>
-									<div class="user-1"><img src="resources/img/icon/user-1.png"></div>
-									<div class="hd-text">
-										<h4>김미숙</h4>
-										<div class="hd-d1">손의 수고로움으로 빚어낸 천 년의 아름다움, 옻칠화손의 수고로움...</div>
-									</div>
-								</a>
-							</div>
+						<div class="swiper-wrapper" id="middleAgedArtist">
+							<div class="swiper-slide"></div>
 						</div>
 						<div class="swiper-pagination swpa-2 pc-no"></div>
 					</div>
@@ -135,52 +62,13 @@
 			<!-- 중견 작가 -->
 			<div class="contents max-1500">
 				<div class="cont-title3">
-					<h3>중견 작가</h3>
+					<h3>원로 작가</h3>
 					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
-				<div class="swi-box swi-show-3">
+				<div class="swi-box swi-show-3" id="seniorArtistList">
 					<div class="swiper mySwiper4">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<a class="hd-div3">
-									<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>
-									<div class="user-1"><img src="resources/img/icon/user-1.png"></div>
-									<div class="hd-text">
-										<h4>김미숙</h4>
-										<div class="hd-d1">손의 수고로움으로 빚어낸 천 년의 아름다움, 옻칠화손의 수고로움...</div>
-									</div>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a class="hd-div3">
-									<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>
-									<div class="user-1"><img src="resources/img/icon/user-1.png"></div>
-									<div class="hd-text">
-										<h4>김미숙</h4>
-										<div class="hd-d1">손의 수고로움으로 빚어낸 천 년의 아름다움, 옻칠화손의 수고로움...</div>
-									</div>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a class="hd-div3">
-									<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>
-									<div class="user-1"><img src="resources/img/icon/user-1.png"></div>
-									<div class="hd-text">
-										<h4>김미숙</h4>
-										<div class="hd-d1">손의 수고로움으로 빚어낸 천 년의 아름다움, 옻칠화손의 수고로움...</div>
-									</div>
-								</a>
-							</div>
-							<div class="swiper-slide">
-								<a class="hd-div3">
-									<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>
-									<div class="user-1"><img src="resources/img/icon/user-1.png"></div>
-									<div class="hd-text">
-										<h4>김미숙</h4>
-										<div class="hd-d1">손의 수고로움으로 빚어낸 천 년의 아름다움, 옻칠화손의 수고로움...</div>
-									</div>
-								</a>
-							</div>
+						<div class="swiper-wrapper" id="seniorArtist">
+							<div class="swiper-slide"></div>
 						</div>
 						<div class="swiper-pagination swpa-2 pc-no"></div>
 					</div>
@@ -200,7 +88,6 @@
 
 
 <script type="text/javascript">
-      
       
       $(window).on("resize", function () {
 	   	    if(window.matchMedia('(min-width: 1537px)').matches)
@@ -457,9 +344,108 @@
       	}, delay);
       });
       
+$(function() {                      
+	artistLibraryList();
+});
       
+function artistLibraryList(){
+	$.ajax({
+        type: "post",
+        url: "/openArtistLibrary",
+        dataType:"json",
+        success: function(data) {
+        	var upAndComingArtist = "";
+        	var middleAgedArtist = "";
+        	var seniorArtist = "";
+        	var upAndComingArtistHtml = "";
+        	var middleAgedArtistHtml = "";
+        	var seniorArtistHtml = "";
+        	if(data != null && data != ""){
+        		upAndComingArtist = data.result.upAndComingArtist;
+        		middleAgedArtist = data.result.middleAgedArtist;
+        		seniorArtist = data.result.seniorArtist;
+        		$("#upAndComingArtist").empty();
+        		$("#middleAgedArtist").empty();
+        		$("#seniorArtist").empty();
+        		for(var i=0; i<upAndComingArtist.length; i++){
+        			upAndComingArtistHtml += '<div class="swiper-slide" style="cursor:pointer;" artstSq="'+ upAndComingArtist[i].artstSq +'">';
+	        		upAndComingArtistHtml += '	<a class="hd-div3">';
+	        		if(upAndComingArtist[i].artstWorkImgUrl != null && upAndComingArtist[i].artstWorkImgUrl != ""){
+	        			upAndComingArtistHtml += '		<div class="hd-bg3"><img src="'+ upAndComingArtist[i].artstWorkImgUrl +'" /></div>';
+	        		}else{
+	        			upAndComingArtistHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>';
+	        		}
+	        		if(upAndComingArtist[i].artstProfileImgUrl != null && upAndComingArtist[i].artstProfileImgUrl != ""){
+	        			upAndComingArtistHtml += '		<div class="user-1"><img src="'+ upAndComingArtist[i].artstProfileImgUrl +'"></div>';
+	        		}else{
+	        			upAndComingArtistHtml += '		<div class="user-1"><img src="resources/img/icon/user-1.png"></div>';
+	        		}
+	        		upAndComingArtistHtml += '		<div class="hd-text">';
+	        		upAndComingArtistHtml += '			<h4>'+ upAndComingArtist[i].artstActvtyNm +'('+ upAndComingArtist[i].artistBirthYear +')</h4>';
+	        		upAndComingArtistHtml += '			<div class="ellipsis"><div class="hd-d1">'+ upAndComingArtist[i].artstSelfIntro +'</div></div>';
+	        		upAndComingArtistHtml += '		</div>';
+	        		upAndComingArtistHtml += '	</a>';
+        			upAndComingArtistHtml += '</div>';
+        		}
+        		$("#upAndComingArtist").append(upAndComingArtistHtml).trigger("create");
+        		for(var i=0; i<middleAgedArtist.length; i++){
+        			middleAgedArtistHtml += '<div class="swiper-slide" style="cursor:pointer;" artstSq="'+ middleAgedArtist[i].artstSq +'">';
+	        		middleAgedArtistHtml += '	<a class="hd-div3">';
+	        		if(middleAgedArtist[i].artstWorkImgUrl != null && middleAgedArtist[i].artstWorkImgUrl != ""){
+	        			middleAgedArtistHtml += '		<div class="hd-bg3"><img src="'+ middleAgedArtist[i].artstWorkImgUrl +'" /></div>';
+	        		}else{
+	        			middleAgedArtistHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>';
+	        		}
+	        		if(middleAgedArtist[i].artstProfileImgUrl != null && middleAgedArtist[i].artstProfileImgUrl != ""){
+	        			middleAgedArtistHtml += '		<div class="user-1"><img src="'+ middleAgedArtist[i].artstProfileImgUrl +'"></div>';
+	        		}else{
+	        			middleAgedArtistHtml += '		<div class="user-1"><img src="resources/img/icon/user-1.png"></div>';
+	        		}
+	        		middleAgedArtistHtml += '		<div class="hd-text">';
+	        		middleAgedArtistHtml += '			<h4>'+ middleAgedArtist[i].artstActvtyNm +'('+ middleAgedArtist[i].artistBirthYear +')</h4>';
+	        		middleAgedArtistHtml += '			<div class="ellipsis"><div class="hd-d1">'+ middleAgedArtist[i].artstSelfIntro +'</div></div>';
+	        		middleAgedArtistHtml += '		</div>';
+	        		middleAgedArtistHtml += '	</a>';
+        			middleAgedArtistHtml += '</div>';
+        		}
+        		$("#middleAgedArtist").append(middleAgedArtistHtml).trigger("create");
+        		for(var i=0; i<seniorArtist.length; i++){
+        			seniorArtistHtml += '<div class="swiper-slide" style="cursor:pointer;" artstSq="'+ seniorArtist[i].artstSq +'">';
+	        		seniorArtistHtml += '	<a class="hd-div3">';
+	        		if(seniorArtist[i].artstWorkImgUrl != null && seniorArtist[i].artstWorkImgUrl != ""){
+	        			seniorArtistHtml += '		<div class="hd-bg3"><img src="'+ seniorArtist[i].artstWorkImgUrl +'" /></div>';
+	        		}else{
+	        			seniorArtistHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>';
+	        		}
+	        		if(seniorArtist[i].artstProfileImgUrl != null && seniorArtist[i].artstProfileImgUrl != ""){
+	        			seniorArtistHtml += '		<div class="user-1"><img src="'+ seniorArtist[i].artstProfileImgUrl +'"></div>';
+	        		}else{
+	        			seniorArtistHtml += '		<div class="user-1"><img src="resources/img/icon/user-1.png"></div>';
+	        		}
+	        		seniorArtistHtml += '		<div class="hd-text">';
+	        		seniorArtistHtml += '			<h4>'+ seniorArtist[i].artstActvtyNm +'('+ seniorArtist[i].artistBirthYear +')</h4>';
+	        		seniorArtistHtml += '			<div class="ellipsis"><div class="hd-d1">'+ seniorArtist[i].artstSelfIntro +'</div></div>';
+	        		seniorArtistHtml += '		</div>';
+	        		seniorArtistHtml += '	</a>';
+        			seniorArtistHtml += '</div>';
+        		}
+        		$("#seniorArtist").append(seniorArtistHtml).trigger("create");
+        		
+        	}
+        	
+        },
+        error: function(error) {
+            alert("오류 발생" + error);
+        }
+	})
+}
       
-    </script>
+$(document).on("click", ".swiper-slide", function(){
+	var artstSq= $(this).attr("artstSq");
+	alert(artstSq); 
+});
+      
+</script>
     
 	
 	
