--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -286,13 +286,10 @@
 						
 						<div>
 							<div class="columns-wrap2" id="columns2">
+								<!-- <figure class="item">
 								
-								<figure class="item">
-								
-									<!-- 하트 on하면 색상 -->
 									<div class="heart on"></div>
 									
-									<!-- active하고 hover하면 나오고 /  sale 넣고 hover하면나옵니다 / auction hover -->
 									<div class="item-div-img active">
 										<img src="resources/img/de/be-bg1.png">
 										
@@ -330,7 +327,6 @@
 										</div>
 									</div>
 									
-									<!-- 하단텍스트 -->
 									<div class="item-body">
 										<div class="uesr-s">
 											<img src="resources/img/de/ues-icon.png" />
@@ -350,17 +346,14 @@
 											</p>
 										</div>
 										
-										<!-- artist active넣어야지나옴 -->
 										<div class="artist active"><span>Artist</span></div>
 									</div>
 									
 								</figure>
 						
 								<figure class="item">
-									<!-- 하트 on하면 색상 -->
 									<div class="heart"></div>
 									
-									<!-- sold-1 ~ 4 넣으면 나옵니다 -->
 									
 									
 									<div class="item-div-img active">
@@ -380,7 +373,6 @@
 									</div>
 									</div>
 									
-									<!-- 하단텍스트 -->
 									<div class="item-body">
 										<div class="uesr-s">
 											<img src="resources/img/de/ues-icon.png" />
@@ -395,20 +387,17 @@
 											
 										</div>
 										
-										<!-- artist -->
 										<div class="artist"><span>Artist</span></div>
 									</div>
 								</figure>
 								
 								<figure class="item">
-									<!-- 하트 on하면 색상 -->
 									<div class="heart"></div>
 									
 									<div class="item-div-img sale">
 										<img src="resources/img/de/be-bg3.png">										
 									</div>
 									
-									<!-- 하단텍스트 -->
 									<div class="item-body">
 										<div class="uesr-s">
 											<img src="resources/img/de/ues-icon.png" />
@@ -422,11 +411,9 @@
 											<h4>판매가 3,700,000</h4>
 										</div>
 										
-										<!-- artist -->
 										<div class="artist"><span>Artist</span></div>
 									</div>
-								</figure>
-								
+								</figure> -->
 							</div>
 						</div>
 						
