--- a/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
@@ -24,7 +24,12 @@
 								<div class="input-box input-group">
 									<input type="hidden" id="uMbrSq" name="uMbrSq">
 									<input type="text" class="input-3" id="uMbrId" name="uMbrId" placeholder="아이디/이메일" />
-									<button type="button" class="group-btn">인증하기</button>
+									<button type="button" class="group-btn" id="EmailCertification">인증하기</button>
+								</div>
+								<div class="input-box" style="text-align:center;display:none" id="emailCertCode">
+									<input  type="text" id="emailCert" name="emailCert" title="인증번호 입력" disabled required style="height:25px;"/>
+									<button type="button" class="ba-btn1" id="emailCertBtn" style="height:25px;padding-left:5px;padding-right:5px;"><span>이메일인증</span></button>
+									<input type="hidden" id="emailCertChk"/>
 								</div>
 								<p class="inp-p" id="uMbrIdCheck">주로 사용하는 이메일을 입력해 주세요. 경매/판매 내역을 발송해 드립니다.</p>
 								
@@ -66,7 +71,55 @@
 	<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
 	</div>
 
-<script type="text/javascript">   
+<script type="text/javascript"> 
+
+//이메일 인증
+$("#EmailCertification").on('click', function(event){
+	
+	var mbrId = $("#uMbrId").val()
+	
+	var params = {
+		mbrId : mbrId	
+	}
+	
+	console.log("mbrId :"+mbrId);
+	
+	$.ajax({
+	     type: "post",
+	     url: "/myPage/memberUpdatEmailCertification",
+	     data: params,
+	     success: function(data) {
+	    	 console.log(data);
+	    	 modalAlertShow("인증번호 발송이 완료되었습니다.<br>입력한 이메일에서 인증번호 확인을 해주십시오.","");
+	    	 $("#emailCert").attr("disabled",false);
+	    	 $("#emailCertCode").show();
+	    	 $("#emailCertChk").val(data);
+	   	 },
+	     error: function(error) {
+	  	   var errorJson = JSON.stringify(error);
+	         console.log(errorJson);
+	     }
+	})
+	
+});
+
+//이메일 인증번호 대조
+$("#emailCertBtn").click(function(){
+	
+	var emailCertChk = $("#emailCertChk").val();
+	var emailCert	= $("#emailCert").val();
+	
+	console.log("emailCertChk :"+emailCertChk);
+	console.log("emailCert :"+emailCert);
+	
+	if(emailCert == emailCertChk){
+		modalAlertShow("인증번호가 일치 합니다.","");
+		$("#emailCertCode").hide();
+		
+	}else{
+		modalAlertShow("인증번호가 일치하지 않습니다.","");
+	}
+});
 
 //회원가입
 $("#memberUpdateBtn").on('click', function(event){
