--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -443,6 +443,7 @@ function artistLibraryList(){
 $(document).on("click", ".swiper-slide", function(){
 	var artstSq= $(this).attr("artstSq");
 	alert(artstSq); 
+    window.location.href="/artistDetail?artstSq=" + artstSq;
 });
       
 </script>
