--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -19,7 +19,7 @@
 				<div class="panel-body">
 					<ul class="mypage-ul">
 						<li class=""><a href="#">거래 내역</a></li>
-						<li class=""><a href="#">등급 / 쿠폰 / 포인트</a></li>
+						<li class=""><a href="/coupon">등급 / 쿠폰 / 포인트</a></li>
 						<li class=""><a href="#">문의 내역</a></li>
 					</ul>
 				</div>
@@ -53,7 +53,7 @@
 			<div id="collapse3" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading3">
 				<div class="panel-body">
 					<ul class="mypage-ul">
-						<li class=""><a href="#">소장품</a></li>
+						<li class=""><a href="/collectible">소장품</a></li>
 						<li class=""><a href="#">스크랩</a></li>
 					</ul>
 				</div>
@@ -72,7 +72,7 @@
 					<ul class="mypage-ul"><!--class="active"-->
 						<li class=""><a href="/memberEdit">회원 정보 수정</a></li>
 						<li class=""><a href="/withdrawal">회원탈퇴</a></li>
-						<li class=""><a href="#">알림 설정</a></li>
+						<li class=""><a href="/alarm">알림 설정</a></li>
 					</ul>
 				</div>
 			</div>
